--- a/.github/workflows/R-pkgdown.yaml
+++ b/.github/workflows/R-pkgdown.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
-          install.packages("pkgdown", type = "binary")
+          remotes::install_cran("pkgdown")
         shell: Rscript {0}
 
       - name: Install package
