--- a/.github/workflows/R-pkgdown.yaml
+++ b/.github/workflows/R-pkgdown.yaml
@@ -8,9 +8,8 @@ name: R-pkgdown
 
 jobs:
   pkgdown:
-    runs-on: ubuntu-16.04
+    runs-on: macOS-latest
     env:
-      RSPM: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"
       GITHUB_PAT: ${{ secrets.TA_DA_ACCESS }}
     steps:
       - uses: actions/checkout@v2
