--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ export(Heading)
 export(Insertion)
 export(Insertions)
 export(MultipleResponseVariable)
+export(NumericArrayVariable)
 export(NumericVariable)
 export(Subtotal)
 export(SummaryStat)
@@ -212,6 +213,7 @@ export(is.MR)
 export(is.Multiple)
 export(is.MultipleResponse)
 export(is.Numeric)
+export(is.NumericArray)
 export(is.Subtotal)
 export(is.SummaryStat)
 export(is.Text)
