grant access to cube's measure type

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,7 @@ export(crunchDifftime)
 export(crunch_user_agent)
 export(crunchdbFunc)
 export(cube)
+export(cubeMeasureType)
 export(cubes)
 export(dashboard)
 export(datasetReference)
@@ -438,6 +439,7 @@ exportMethods(bases)
 exportMethods(categories)
 exportMethods(complete.cases)
 exportMethods(cube)
+exportMethods(cubeMeasureType)
 exportMethods(cubes)
 exportMethods(cut)
 exportMethods(dates)
