Add ability to collapse crunch automation scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ export(changeCategoryID)
 export(checkForNewVersion)
 export(cleanseBatches)
 export(collapseCategories)
+export(collapseScripts)
 export(combine)
 export(combineCategories)
 export(combineResponses)
@@ -434,6 +435,7 @@ exportMethods(as.Text)
 exportMethods(as.vector)
 exportMethods(bases)
 exportMethods(categories)
+exportMethods(collapseScripts)
 exportMethods(complete.cases)
 exportMethods(cube)
 exportMethods(cubes)
