--- a/NAMESPACE
+++ b/NAMESPACE
@@ -308,6 +308,7 @@ export(shojifyDatasetMetadata)
 export(showScriptErrors)
 export(slideCategories)
 export(slideQueryEnv)
+export(slideTransform)
 export(slides)
 export(straightlineResponse)
 export(streaming)
