create `vizSpecs()` and standardize analysis-methods documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export("subtitle<-")
 export("subtitles<-")
 export("team<-")
 export("titles<-")
+export("vizSpecs<-")
 export("weight<-")
 export(AbstractCategories)
 export(AbstractCategory)
@@ -336,6 +337,7 @@ export(values)
 export(variableMetadata)
 export(variables)
 export(versions)
+export(vizSpecs)
 export(webApp)
 export(weight)
 export(weightVariables)
@@ -421,6 +423,7 @@ exportMethods("uniformBasis<-")
 exportMethods("value<-")
 exportMethods("values<-")
 exportMethods("variables<-")
+exportMethods("vizSpecs<-")
 exportMethods("weight<-")
 exportMethods("weightVariables<-")
 exportMethods(alias)
@@ -544,6 +547,7 @@ exportMethods(users)
 exportMethods(value)
 exportMethods(values)
 exportMethods(variables)
+exportMethods(vizSpecs)
 exportMethods(weight)
 exportMethods(weightVariables)
 exportMethods(write.csv)
