add palette example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,6 +168,7 @@ export(datasets)
 export(dates)
 export(datetimeFromCols)
 export(decks)
+export(defaultPalette)
 export(deleteDataset)
 export(deleteSubvariable)
 export(deleteSubvariables)
@@ -263,6 +264,7 @@ export(noTransforms)
 export(notifyIfNewVersion)
 export(ownerNames)
 export(owners)
+export(palettes)
 export(pendingStream)
 export(permissions)
 export(pk)
@@ -448,6 +450,7 @@ exportMethods(cubes)
 exportMethods(cut)
 exportMethods(dates)
 exportMethods(decks)
+exportMethods(defaultPalette)
 exportMethods(delete)
 exportMethods(deprivatize)
 exportMethods(derivation)
@@ -503,6 +506,7 @@ exportMethods(ncol)
 exportMethods(notes)
 exportMethods(ordering)
 exportMethods(owner)
+exportMethods(palettes)
 exportMethods(popMagnitude)
 exportMethods(popSize)
 exportMethods(privateFolder)
