--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -136,6 +136,7 @@ Collate:
     'multitables.R'
     'new-dataset.R'
     'ordering.R'
+    'palettes.R'
     'permission-catalog.R'
     'permissions.R'
     'show.R'
