rename slideTransform to makeDimTransform and a refactor

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -109,6 +109,7 @@ Collate:
     'decks.R'
     'delete.R'
     'dichotomize.R'
+    'dimension-transforms.R'
     'drop-rows.R'
     'edit-lock.R'
     'export-dataset.R'
@@ -152,7 +153,6 @@ Collate:
     'shoji-order-slots.R'
     'shoji-order.R'
     'shoji.R'
-    'slide-transforms.R'
     'slides.R'
     'sliding-categories.R'
     'subtotals-and-headings.R'
