--- a/NAMESPACE
+++ b/NAMESPACE
@@ -239,6 +239,7 @@ export(makeArray)
 export(makeArrayGadget)
 export(makeCaseVariable)
 export(makeCaseWhenVariable)
+export(makeDimTransform)
 export(makeFrame)
 export(makeMR)
 export(makeMRFromText)
@@ -309,7 +310,6 @@ export(shojifyDatasetMetadata)
 export(showScriptErrors)
 export(slideCategories)
 export(slideQueryEnv)
-export(slideTransform)
 export(slides)
 export(straightlineResponse)
 export(streaming)
