--- a/.github/workflows/R-pkgdown.yaml
+++ b/.github/workflows/R-pkgdown.yaml
@@ -10,6 +10,7 @@ jobs:
   pkgdown:
     runs-on: ubuntu-18.04
     env:
+      GITHUB_PAT: ${{ secrets.TA_DA_ACCESS }}
       RSPM: https://packagemanager.rstudio.com/cran/__linux__/bionic/latest
 
     steps:
