allow creating subtotal differences & prepare for kwarg migration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -400,6 +400,7 @@ exportMethods("is.published<-")
 exportMethods("is.selected<-")
 exportMethods("is.weight<-")
 exportMethods("is.weightVariable<-")
+exportMethods("kwarguments<-")
 exportMethods("members<-")
 exportMethods("multitables<-")
 exportMethods("name<-")
@@ -489,6 +490,7 @@ exportMethods(is.public)
 exportMethods(is.published)
 exportMethods(is.selected)
 exportMethods(jsonprep)
+exportMethods(kwarguments)
 exportMethods(length)
 exportMethods(makeInsertion)
 exportMethods(margin.table)
