export forceVarCat because it'll probably be useful for packge developers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,6 +191,7 @@ export(filter)
 export(flattenOrder)
 export(flipArrays)
 export(folder)
+export(forceVarCat)
 export(forkDataset)
 export(formulaToSlideQuery)
 export(fortify.CrunchDataFrame)
