renames based on code review

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,7 +191,7 @@ export(filter)
 export(flattenOrder)
 export(flipArrays)
 export(folder)
-export(forceVarCat)
+export(forceVariableCatalog)
 export(forkDataset)
 export(formulaToSlideQuery)
 export(fortify.CrunchDataFrame)
