--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,6 +10,7 @@ template:
 articles:
 - title: Getting started
   desc: How to find, import, and clean data in Crunch
+  navbar: Getting started
   contents:
   - crunch
   - variables
@@ -17,6 +18,7 @@ articles:
   - variable-order
   - projects
 - title: Exploring and analyzing
+  navbar: Exploring and analyzing
   desc: ~
   contents:
   - derive
@@ -26,10 +28,16 @@ articles:
   - export
   - fork-and-merge
 - title: Going deeper
+  navbar: Going deeper
   desc: Details on the Crunch API and objects
   contents:
   - crunch-internals
   - abstract-categories
+- title: Cookbooks
+  navbar: Cookbooks
+  desc: References that show how to do common tasks
+  contents:
+  - deck-cookbook
 reference:
 - title: Upload
   contents:
@@ -242,6 +250,7 @@ reference:
   - self
   - session
   - tojson-crunch
+  - forceVariableCatalog
 - title: Other
   contents:
   - CrunchDataset-class
@@ -263,38 +272,6 @@ reference:
   - SO_schema
   - SO_survey
 navbar:
-  left:
-    - text: Intro
-      href: articles/crunch.html
-    - text: Reference
-      href: reference/
-    - text: Articles
-      menu:
-      -  text: Getting Started
-         href: articles/crunch.html
-      -  text: Variables
-         href: articles/variables.html
-      -  text: Array Variables
-         href: articles/array-variables.html
-      -  text: Organize Variables
-         href: articles/variable-order.html
-      -  text: Derive Variables
-         href: articles/derive.html
-      -  text: Analyze Data
-         href: articles/analyze.html
-      -  text: Filter Data
-         href: articles/filters.html
-      -  text: Export Data
-         href: articles/export.html
-      -  text: Projects
-         href: articles/projects.html
-      -  text: Fork and Merge
-         href: articles/fork-and-merge.html
-      -  text: Subtotals and Headings
-         href: articles/subtotals.html
-      -  text: Crunch Internals
-         href: articles/crunch-internals.html
-      -  text: Abstract Categories
-         href: articles/abstract-categories.html
-    - text: News
-      href: news/
+  structure:
+    left:  [home, intro, reference, articles, news]
+    right: [github]
