WIP generateOrganizeCommand to get the Automation script for current folder order

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,6 +196,7 @@ export(forkDataset)
 export(formulaToSlideQuery)
 export(fortify.CrunchDataFrame)
 export(fortify.CrunchDataset)
+export(generateOrganizeCommand)
 export(getAccountUserCatalog)
 export(getDimTypes)
 export(getTeams)
