--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -148,6 +148,7 @@ reference:
   - runCrunchAutomation
   - automation-undo
   - script-catalog
+  - generateOrganizeCommand
 - title: Analysis
   contents:
   - crtabs
