--- a/NAMESPACE
+++ b/NAMESPACE
@@ -258,6 +258,7 @@ export(newDatasetFromFile)
 export(newDeck)
 export(newExampleDataset)
 export(newFilter)
+export(newMarkdownSlide)
 export(newMultitable)
 export(newProject)
 export(newSlide)
