--- a/NAMESPACE
+++ b/NAMESPACE
@@ -246,6 +246,7 @@ export(makeFrame)
 export(makeMR)
 export(makeMRFromText)
 export(makeWeight)
+export(markdownSlideImage)
 export(matchCatToFeat)
 export(me)
 export(mergeFork)
