[177828956]: add setter & getter for markdown content

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export("query<-")
 export("resolution<-")
 export("rollupResolution<-")
 export("settings<-")
+export("slideMarkdown<-")
 export("slides<-")
 export("streaming<-")
 export("subtitle<-")
@@ -314,6 +315,7 @@ export(shojiURL)
 export(shojifyDatasetMetadata)
 export(showScriptErrors)
 export(slideCategories)
+export(slideMarkdown)
 export(slideQueryEnv)
 export(slides)
 export(straightlineResponse)
@@ -414,6 +416,7 @@ exportMethods("owner<-")
 exportMethods("popMagnitude<-")
 exportMethods("popSize<-")
 exportMethods("query<-")
+exportMethods("slideMarkdown<-")
 exportMethods("slides<-")
 exportMethods("startDate<-")
 exportMethods("subtitle<-")
@@ -530,6 +533,7 @@ exportMethods(show)
 exportMethods(showIfAny)
 exportMethods(showMissing)
 exportMethods(showTransforms)
+exportMethods(slideMarkdown)
 exportMethods(slides)
 exportMethods(startDate)
 exportMethods(subset)
