--- a/docker/jenkins/Dockerfile.rcrunch
+++ b/docker/jenkins/Dockerfile.rcrunch
@@ -1,14 +1,20 @@
 FROM rstudio/r-base:3.6-bionic
 ARG RPROXY_CREDS
-ENV R_LIB=/home/jenkins/R/master
-ENV R_LIBS=${R_LIB}
+ARG HOMEDIR=/home/jenkins/
+ARG R_LIB=/home/jenkins/R/master
+ARG R_LIBS=/home/jenkins/R/master
+ENV R_LIB=${R_LIB}
+ENV R_LIBS=${R_LIBS}
+ARG USER=997
+ARG GROUP=991
+ENV HOMEDIR=${HOMEDIR}
 USER root
 RUN apt-get update && apt-get install build-essential libgit2-dev libssl-dev libcurl4-gnutls-dev libxml2-dev libsodium-dev -y
 # Add the user/group jenkins
-RUN groupadd --gid 991 jenkins \
-    && useradd --uid 997 --gid jenkins --shell /bin/bash --create-home -d /home/jenkins jenkins
-COPY --chown=jenkins:jenkins . /home/jenkins/
-WORKDIR /home/jenkins/
+RUN groupadd --gid ${GROUP} jenkins \
+    && useradd --uid ${USER} --gid jenkins --shell /bin/bash --create-home -d /home/jenkins jenkins
+COPY --chown=jenkins:jenkins . ${HOMEDIR}
+WORKDIR ${HOMEDIR}
 RUN echo 'local({\n\
     r <- getOption("repos")\n\
     r["Nexus"] <- "https://'${RPROXY_CREDS}'@ui.nexus.crint.net/repository/rcrunch/"\n\
