--- a/docker/jenkins/Dockerfile.rcrunch
+++ b/docker/jenkins/Dockerfile.rcrunch
@@ -1,6 +1,6 @@
 FROM rstudio/r-base:3.6-bionic
 ARG RPROXY_CREDS
-ARG HOMEDIR=/home/jenkins/
+ARG HOMEDIR=/home/jenkins
 ARG R_LIB=/home/jenkins/R/master
 ARG R_LIBS=/home/jenkins/R/master
 ENV R_LIB=${R_LIB}
@@ -12,7 +12,7 @@ USER root
 RUN apt-get update && apt-get install build-essential libgit2-dev libssl-dev libcurl4-gnutls-dev libxml2-dev libsodium-dev -y
 # Add the user/group jenkins
 RUN groupadd --gid ${GROUP} jenkins \
-    && useradd --uid ${USER} --gid jenkins --shell /bin/bash --create-home -d /home/jenkins jenkins
+    && useradd --uid ${USER} --gid jenkins --shell /bin/bash --create-home -d ${HOMEDIR} jenkins
 COPY --chown=jenkins:jenkins . ${HOMEDIR}
 WORKDIR ${HOMEDIR}
 RUN echo 'local({\n\
