--- a/docker/jenkins/Dockerfile.rcrunch
+++ b/docker/jenkins/Dockerfile.rcrunch
@@ -1,10 +1,10 @@
 FROM rstudio/r-base:3.6-bionic
 ARG RPROXY_CREDS
 ARG HOMEDIR=/home/jenkins
-ARG R_LIB=/home/jenkins/R/master
-ARG R_LIBS=/home/jenkins/R/master
-ENV R_LIB=${R_LIB}
-ENV R_LIBS=${R_LIBS}
+ARG R_LIB
+ARG R_LIBS
+ENV R_LIB=${HOMEDIR}/R/master
+ENV R_LIBS=${R_LIB}
 ARG USER=997
 ARG GROUP=991
 ENV HOMEDIR=${HOMEDIR}
