--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,7 @@ Encoding: UTF-8
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 LazyData: true
+Config/testthat/edition: 3
 Collate:
     'AllClasses.R'
     'AllGenerics.R'
