[180398987]: consolidate env/option code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -309,6 +309,7 @@ export(setName)
 export(setNames)
 export(setOrder)
 export(set_crunch_config)
+export(set_crunch_opt)
 export(settings)
 export(share)
 export(shojiURL)
