[180398987]: more tweaks plus vignette update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -158,6 +158,7 @@ export(crtabs)
 export(crunchBetween)
 export(crunchBox)
 export(crunchDifftime)
+export(crunch_sitrep)
 export(crunch_user_agent)
 export(crunchdbFunc)
 export(cube)
