[180398987]: testing plus cleanup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -310,8 +310,9 @@ export(setName)
 export(setNames)
 export(setOrder)
 export(set_crunch_config)
-export(set_crunch_opt)
+export(set_crunch_opts)
 export(settings)
+export(setupCrunchAuth)
 export(share)
 export(shojiURL)
 export(shojifyDatasetMetadata)
