--- a/NAMESPACE
+++ b/NAMESPACE
@@ -158,6 +158,7 @@ export(crtabs)
 export(crunchBetween)
 export(crunchBox)
 export(crunchDifftime)
+export(crunch_sitrep)
 export(crunch_user_agent)
 export(crunchdbFunc)
 export(cube)
@@ -309,7 +310,9 @@ export(setName)
 export(setNames)
 export(setOrder)
 export(set_crunch_config)
+export(set_crunch_opts)
 export(settings)
+export(setupCrunchAuth)
 export(share)
 export(shojiURL)
 export(shojifyDatasetMetadata)
