[181208093]: use the public folder rather than root for variables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -521,6 +521,7 @@ exportMethods(popSize)
 exportMethods(privateFolder)
 exportMethods(privatize)
 exportMethods(prop.table)
+exportMethods(publicFolder)
 exportMethods(refresh)
 exportMethods(revertScript)
 exportMethods(round)
