--- a/docker/jenkins/Dockerfile.rcrunch
+++ b/docker/jenkins/Dockerfile.rcrunch
@@ -11,7 +11,7 @@ ENV HOMEDIR=${HOMEDIR}
 USER root
 RUN locale-gen en_US.UTF-8
 ENV LANG=en_US.UTF-8
-RUN apt-get update && apt-get install build-essential libgit2-dev libssl-dev libcurl4-gnutls-dev libxml2-dev libsodium-dev -y
+RUN apt-get update && apt-get install build-essential libtiff5-dev libfribidi-dev libfontconfig1-dev libgit2-dev libssl-dev libcurl4-gnutls-dev libxml2-dev libsodium-dev -y
 # Add the user/group jenkins
 RUN groupadd --gid ${GROUP} jenkins \
     && useradd --uid ${USER} --gid jenkins --shell /bin/bash --create-home -d ${HOMEDIR} jenkins
