--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(MultipleResponseVariable)
 export(NumericArrayVariable)
 export(NumericVariable)
 export(Subtotal)
+export(Subvariables)
 export(SummaryStat)
 export(TextVariable)
 export(Transforms)
