[184615453]: Add ability to run Crunch Automation scripts on folders
Previously, the runCrunchAutomation function only supported running CA scripts on datasets.

--- a/mocks/app.crunch.io/api/projects/project1.json
+++ b/mocks/app.crunch.io/api/projects/project1.json
@@ -7,6 +7,11 @@
         "members": "https://app.crunch.io/api/projects/project1/members/",
         "project": "https://app.crunch.io/api/projects/"
     },
+    "views": {
+        "templates": "https://app.crunch.io/api/projects/project1/templates/",
+        "logo": "https://app.crunch.io/api/projects/project1/logo/",
+        "execute": "https://app.crunch.io/api/projects/project1/execute/"
+    },
     "description": "Details for a specific project",
     "body": {
         "name": "Project One",
