--- a/.github/workflows/R-pkgdown.yaml
+++ b/.github/workflows/R-pkgdown.yaml
@@ -8,7 +8,7 @@ name: pkgdown
 
 jobs:
   test-coverage:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
