--- a/docker/jenkins/Dockerfile.rcrunch
+++ b/docker/jenkins/Dockerfile.rcrunch
@@ -4,7 +4,7 @@ ARG HOMEDIR=/home/jenkins
 ARG USER=997
 ARG GROUP=991
 ENV HOMEDIR=${HOMEDIR}
-ENV R_LIBS=${HOMEDIR}/R/master
+ENV R_LIBS=${HOMEDIR}/rlibs
 USER root
 RUN locale-gen en_US.UTF-8
 ENV LANG=en_US.UTF-8
@@ -12,7 +12,8 @@ RUN apt-get update && apt-get install build-essential libtiff5-dev libfribidi-de
 # Add the user/group jenkins
 RUN groupadd --gid ${GROUP} jenkins \
     && useradd --uid ${USER} --gid jenkins --shell /bin/bash --create-home -d ${HOMEDIR} jenkins
-COPY --chown=jenkins:jenkins . ${HOMEDIR}
+# Copy only the minimal amount of the package to install dependencies
+COPY --chown=jenkins:jenkins ./DESCRIPTION ./Makefile ${HOMEDIR}
 WORKDIR ${HOMEDIR}
 RUN echo 'local({\n\
     r <- getOption("repos")\n\
