--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,6 +191,7 @@ export(exportDataset)
 export(exportDeck)
 export(extendDataset)
 export(filter)
+export(findVariables)
 export(flattenOrder)
 export(flipArrays)
 export(folder)
