[188559300]: update pkgdown token

--- a/.github/workflows/R-pkgdown.yaml
+++ b/.github/workflows/R-pkgdown.yaml
@@ -7,11 +7,11 @@ on:
 name: pkgdown
 
 jobs:
-  test-coverage:
+  pkgdown:
     runs-on: ubuntu-latest
 
     env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_PAT: ${{ secrets.TA_DA_ACCESS }}
 
     steps:
       - uses: actions/checkout@v3
