[zc-231]: fix github actions

--- a/.github/workflows/R-codecov-lint.yaml
+++ b/.github/workflows/R-codecov-lint.yaml
@@ -26,6 +26,7 @@ jobs:
           extra-packages: |
             any::covr
             any::lintr
+            any::cyclocomp
           needs: check
 
       - name: Decompress cubes
